<resources>
    <string name="app_name">Gro</string>
    <string name="Intro">Welcome %s!</string>
    <string name="log">Gro Your Plant</string>
    <string name="challenge">Challenges</string>
    <string name="investment">Investments</string>
    <string name="name">Welcome</string>
    <string name="workout_more">Add New Workout</string>
    <string name="edit">Edit Profile</string>
    <string name="accomplishment">Gro Your Plant</string>
    <string name="category">Pick your category:</string>
    <string name="accomplishmentName">Add a name:</string>
    <string name="description">Add a short description (optional):</string>
    <string name="next">Next</string>
    <string name="intensity">Choose workout intensity:  </string>
    <string name="workouttime">Enter workout time (minutes):</string>
</resources>
